# pymicro-wakeword

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml  wheels.yml
lib/: SOURCE
lib/linux_armv7l/: SOURCE
pymicro_wakeword/: __init__.py  __main__.py  const.py  microwakeword.py  wakeword.py
script/: copy_lib  format  lint  package  run
tests/: test_microwakeword.py
tests/computer/: computer.json  computer.tflite
