[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name        = "pymicro-wakeword"
version     = "2.0.0"
license     = {text = "Apache-2.0"}
description = "A TensorFlow based wake word detection training framework using synthetic sample generation suitable for certain microcontrollers."
readme      = "README.md"
authors     = [
    {name = "Michael Hansen", email = "mike@rhasspy.org"}
]
keywords    = ["wakeword", "detection", "hotword"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9.0"
dependencies = [
    "pymicro-features>=2,<3",
    "numpy",
]

[project.urls]
"Source Code" = "https://github.com/OHF-Voice/pymicro-wakeword"

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["pymicro_wakeword"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
pymicro_wakeword = [
    "models/*.json",
    "models/*.tflite",
    "lib/*",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pylint",
    "pytest",
    "build",
]
